# CMakeLearn

01-basic/C-statuc-library/: CMakeLists.txt
01-basic/C-statuc-library/include/: Hello.h
01-basic/C-test/: CMakeLists.txt
01-basic/D-shared-library/: CMakelists.txt
01-basic/D-shared-library/include/: Hello.h
01-basic/D-shared-library/src/: Hello.cpp
01-basic/D-test/: CMakeLists.txt  main.cpp
